--- a/index.html
+++ b/index.html
@@ -3,91 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Ethiopia 2026</title>
+    <title>ልማት Hub | Live Mission Portal</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
-        body { background: var(--bg); overflow-x: hidden; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --green: #28a745; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        body { background: var(--bg); }
 
         /* 1. MOVING TICKER */
         .ticker { background: var(--yellow); color: var(--blue); padding: 12px 0; font-weight: bold; position: sticky; top: 0; z-index: 2000; overflow: hidden; white-space: nowrap; }
         .ticker-content { display: inline-block; padding-left: 100%; animation: scroll 25s linear infinite; }
         @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
-        /* 2. NAVIGATION */
-        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; }
-        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
+        /* 2. LIVE UPDATES BAR */
+        .live-stats { background: #eef2f7; padding: 10px; text-align: center; border-bottom: 1px solid #ddd; display: flex; justify-content: center; gap: 30px; font-size: 0.9rem; color: var(--blue); }
+        .stat-item b { color: var(--green); }
 
-        /* 3. HERO SECTION */
         .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
+        
+        /* 3. HERO & BUTTONS */
         .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 20px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 40px; }
-        .id-input { padding: 15px; width: 80%; max-width: 400px; border-radius: 10px; border: none; margin: 20px 0; text-align: center; font-size: 1rem; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; }
+        .btn-group { display: flex; gap: 15px; justify-content: center; margin-top: 20px; flex-wrap: wrap; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 15px 30px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
+        .cert-btn { background: var(--green); color: white; padding: 15px 30px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
 
-        /* 4. TRACK CARDS CONFIGURATION */
+        /* 4. TRACKS GRID */
         .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
-        .t-box { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border: 1px solid #eee; transition: 0.3s; }
-        .t-box:hover { transform: translateY(-10px); }
-        .t-img { width: 100%; height: 180px; background: var(--blue); display: flex; align-items: center; justify-content: center; overflow: hidden; }
-        .t-img img { width: 100%; height: 100%; object-fit: cover; } /* Fixes stretching */
-        .t-info { padding: 20px; font-weight: bold; color: var(--blue); text-align: center; font-size: 1.1rem; }
+        .t-box { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border: 1px solid #eee; text-align: center; }
+        .t-img { width: 100%; height: 180px; background: var(--blue); overflow: hidden; }
+        .t-img img { width: 100%; height: 100%; object-fit: cover; }
+
+        /* 5. CERTIFICATE MODAL */
+        #certModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 3000; align-items: center; justify-content: center; }
+        .cert-card { background: white; width: 90%; max-width: 600px; padding: 40px; border: 10px solid var(--blue); position: relative; text-align: center; border-radius: 5px; }
+        .cert-card h2 { color: var(--blue); margin-bottom: 20px; }
+        .close-btn { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
     </style>
 </head>
 <body>
 
 <div class="ticker">
-    <div class="ticker-content">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • JOIN THE DIGITAL TRANSFORMATION NOW •</div>
+    <div class="ticker-content">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • CLAIM YOUR CERTIFICATE NOW •</div>
 </div>
 
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <div style="font-weight:bold; color:#003973; display:flex; gap:15px;">
-        <span>About</span><span>Tracks</span><span>Contact</span>
-    </div>
-</nav>
+<div class="live-stats">
+    <div class="stat-item">Live Enrolled: <b id="count">482,102</b></div>
+    <div class="stat-item">Status: <b style="color:var(--green)">Online</b></div>
+</div>
 
 <div class="container">
     <div class="hero">
         <h1>Ethiopia's 2026 Digital Mission</h1>
         <p>National ID Verification Portal</p>
-        <input type="text" class="id-input" placeholder="Enter Fayda ID">
-        <br>
-        <button class="v-btn">VERIFY & ENTER</button>
+        <div class="btn-group">
+            <button class="v-btn">VERIFY FAYDA ID</button>
+            <button class="cert-btn" onclick="showCert()">VIEW CERTIFICATE</button>
+        </div>
     </div>
 
     <h2 style="color:var(--blue); margin-bottom:30px; border-left:8px solid var(--yellow); padding-left:15px;">Official Tracks</h2>
     <div class="tracks-grid" id="track-list"></div>
 </div>
 
+<div id="certModal">
+    <div class="cert-card">
+        <span class="close-btn" onclick="closeCert()">&times;</span>
+        <div style="border: 2px solid var(--yellow); padding: 20px;">
+            <h1 style="color: var(--blue);">CERTIFICATE OF COMPLETION</h1>
+            <p>This is to certify that a <b>Verified Fayda ID Holder</b> has successfully completed the</p>
+            <h2 style="margin: 20px 0;">DIGITAL ETHIOPIA 2026 MISSION</h2>
+            <div style="display:flex; justify-content: space-between; margin-top: 40px;">
+                <span>Date: Feb 2026</span>
+                <span style="color:var(--blue); font-weight: bold;">Verified by ልማት Hub</span>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
-    // These 10 links include the "3 Remaining" fixes for Data Science, UI/UX, and Fintech
+    // FIXED STABLE LINKS
     const trackImages = [
         "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", // AI
         "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", // Cyber
         "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", // Web
-        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", // Data Science (FIXED)
+        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", // Data Science
         "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", // Cloud
         "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", // Mobile
         "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", // Blockchain
-        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", // UI/UX (FIXED)
+        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", // UI/UX
         "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", // IoT
-        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"  // Fintech (FIXED)
+        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"  // Fintech
     ];
 
     const names = ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"];
 
     const list = document.getElementById('track-list');
-    
     names.forEach((name, i) => {
-        // BACKUP SYSTEM: If an image fails, it generates a colored block with the track name
         list.innerHTML += `
             <div class="t-box">
-                <div class="t-img">
-                    <img src="${trackImages[i]}" alt="${name}" onerror="this.parentElement.innerHTML='<div style=color:white;font-weight:bold;text-align:center;padding:20px>${name} Image</div>'">
-                </div>
-                <div class="t-info">${name}</div>
+                <div class="t-img"><img src="${trackImages[i]}" alt="${name}"></div>
+                <div style="padding:15px; font-weight:bold; color:#003973">${name}</div>
             </div>`;
     });
+
+    // Certificate Logic
+    function showCert() { document.getElementById('certModal').style.display = 'flex'; }
+    function closeCert() { document.getElementById('certModal').style.display = 'none'; }
+
+    // Live Update Logic (Increments number every few seconds)
+    let count = 482102;
+    setInterval(() => {
+        count += Math.floor(Math.random() * 5);
+        document.getElementById('count').innerText = count.toLocaleString();
+    }, 3000);
 </script>
 
 </body>
