--- a/index.html
+++ b/index.html
@@ -3,85 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Mission 2026 Portal</title>
+    <title>ልማት Hub | Digital Ethiopia 2026</title>
     <style>
         :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --green: #28a745; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; }
 
-        /* TICKER & STATS */
+        /* HEADER & TICKER */
         .ticker { background: var(--yellow); color: var(--blue); padding: 12px 0; font-weight: bold; position: sticky; top: 0; z-index: 2000; overflow: hidden; white-space: nowrap; }
         .ticker-content { display: inline-block; padding-left: 100%; animation: scroll 25s linear infinite; }
         @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
+        .live-bar { background: #fff; padding: 10px; border-bottom: 1px solid #ddd; display: flex; justify-content: center; gap: 30px; font-size: 0.85rem; font-weight: 600; }
+        .live-bar span b { color: var(--green); }
+
         .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
-        
-        /* HERO & VERIFY ID SECTION */
+
+        /* HERO & VERIFY */
         .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 20px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 40px; }
-        .id-input { padding: 15px; width: 80%; max-width: 400px; border-radius: 10px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        .v-btn:hover { background: white; }
+        .id-input { padding: 15px; width: 90%; max-width: 400px; border-radius: 10px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 15px 30px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; margin: 5px; }
+        .cert-btn { background: var(--green); color: white; padding: 15px 30px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; margin: 5px; }
 
-        /* SCHEDULE SECTION */
+        /* SCHEDULE & TRACKS */
         .section-h { color: var(--blue); margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
-        .schedule-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; }
-        .sched-card { background: white; padding: 20px; border-radius: 12px; border-bottom: 4px solid var(--blue); box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .sched-card b { display: block; color: var(--blue); font-size: 1.1rem; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; }
+        
+        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border: 1px solid #eee; transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); }
+        .card-img { width: 100%; height: 150px; background: var(--blue); }
+        .card-img img { width: 100%; height: 100%; object-fit: cover; }
+        .card-info { padding: 15px; font-weight: bold; text-align: center; color: var(--blue); }
 
-        /* FAQ SECTION */
-        .faq-item { background: white; margin-bottom: 10px; border-radius: 8px; overflow: hidden; border: 1px solid #ddd; }
-        .faq-question { padding: 15px; background: #fff; cursor: pointer; display: flex; justify-content: space-between; font-weight: bold; color: var(--blue); }
-        .faq-answer { padding: 0 15px; max-height: 0; overflow: hidden; transition: 0.3s ease-out; background: #f9f9f9; color: #666; }
+        /* FAQ */
+        .faq-item { background: white; margin-bottom: 10px; border-radius: 10px; border: 1px solid #ddd; }
+        .faq-q { padding: 15px; cursor: pointer; font-weight: bold; display: flex; justify-content: space-between; }
+        .faq-a { padding: 0 15px; max-height: 0; overflow: hidden; transition: 0.3s; background: #fdfdfd; font-size: 0.95rem; }
 
-        /* TRACK CARDS */
-        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-        .t-box { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; border: 1px solid #eee; }
-        .t-img { width: 100%; height: 160px; background: var(--blue); }
-        .t-img img { width: 100%; height: 100%; object-fit: cover; }
+        /* MODAL */
+        #modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:3000; align-items:center; justify-content:center; }
+        .modal-content { background: white; padding: 40px; border: 10px solid var(--blue); max-width: 600px; width: 90%; text-align: center; position: relative; }
     </style>
 </head>
 <body>
 
-<div class="ticker">
-    <div class="ticker-content">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • JOIN THE DIGITAL TRANSFORMATION •</div>
+<div class="ticker"><div class="ticker-content">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • JOIN THE DIGITAL TRANSFORMATION NOW •</div></div>
+
+<div class="live-bar">
+    <span>Live Enrollment: <b id="count">482,102</b></span>
+    <span>Status: <b>Active</b></span>
 </div>
 
 <div class="container">
     <div class="hero">
-        <h1>Verify Your Mission ID</h1>
-        <p>Enter your Fayda National ID to unlock your dashboard</p>
-        <input type="number" id="faydaID" class="id-input" placeholder="0000 0000 0000">
+        <h1>Fayda ID Verification</h1>
+        <p>Unlock your Digital 2026 Dashboard</p>
+        <input type="number" id="idIn" class="id-input" placeholder="Enter Fayda ID Number">
         <br>
-        <button class="v-btn" onclick="verifyID()">VERIFY & ENTER</button>
-        <p id="v-msg" style="margin-top:15px; font-weight:bold;"></p>
+        <button class="v-btn" onclick="verify()">VERIFY & ENTER</button>
+        <button class="cert-btn" onclick="openCert()">VIEW CERTIFICATE</button>
+        <p id="msg" style="margin-top:15px; font-weight:bold;"></p>
     </div>
 
-    <h2 class="section-h">Weekly Mission Schedule</h2>
-    <div class="schedule-grid">
-        <div class="sched-card"><b>Monday</b> 09:00 AM<br>AI Fundamentals</div>
-        <div class="sched-card"><b>Wednesday</b> 02:00 PM<br>Cyber Security Lab</div>
-        <div class="sched-card"><b>Friday</b> 10:00 AM<br>Fintech Seminar</div>
+    <h2 class="section-h">Mission Schedule</h2>
+    <div class="grid">
+        <div class="card" style="padding:20px"><b>Monday</b><br>AI Engineering</div>
+        <div class="card" style="padding:20px"><b>Wednesday</b><br>Cyber Security</div>
+        <div class="card" style="padding:20px"><b>Friday</b><br>Fintech & IoT</div>
     </div>
 
-    <h2 class="section-h">Your Learning Tracks</h2>
-    <div class="tracks-grid" id="track-list"></div>
+    <h2 class="section-h">Learning Tracks</h2>
+    <div class="grid" id="track-list"></div>
 
-    <h2 class="section-h">Frequently Asked Questions</h2>
-    <div id="faq-container">
-        <div class="faq-item">
-            <div class="faq-question" onclick="toggleFAQ(0)">How do I get my certificate? <span>+</span></div>
-            <div class="faq-answer" id="faq0"><p style="padding:15px">Certificates are issued automatically after completing your chosen track and verifying your Fayda ID.</p></div>
-        </div>
-        <div class="faq-item">
-            <div class="faq-question" onclick="toggleFAQ(1)">Is this program free? <span>+</span></div>
-            <div class="faq-answer" id="faq1"><p style="padding:15px">Yes, the 2026 Digital Mission is fully funded for verified Ethiopian citizens.</p></div>
-        </div>
+    <h2 class="section-h">FAQ</h2>
+    <div class="faq-item">
+        <div class="faq-q" onclick="toggleF(0)">Is the certificate internationally recognized? <span>+</span></div>
+        <div class="faq-a" id="f0"><p style="padding:15px">Yes, the 2026 Mission certificate is backed by national digital standards.</p></div>
+    </div>
+</div>
+
+<div id="modal">
+    <div class="modal-content">
+        <span style="position:absolute; top:10px; right:15px; cursor:pointer; font-size:24px" onclick="closeCert()">&times;</span>
+        <h1 style="color:var(--blue)">MISSION CERTIFICATE</h1>
+        <p style="margin:20px 0">Awarded to a Verified Fayda ID Holder</p>
+        <div style="border: 2px solid var(--yellow); padding: 15px;">Digital Ethiopia 2026</div>
     </div>
 </div>
 
 <script>
-    // STABLE IMAGE ARRAY
-    const trackImages = [
+    const images = [
         "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", // AI
         "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", // Cyber
         "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", // Web
@@ -93,37 +104,33 @@
         "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", // IoT
         "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"  // Fintech
     ];
-
     const names = ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"];
 
-    // Populate Tracks
     const list = document.getElementById('track-list');
-    names.forEach((name, i) => {
-        list.innerHTML += `<div class="t-box">
-            <div class="t-img"><img src="${trackImages[i]}" alt="${name}"></div>
-            <div style="padding:15px; font-weight:bold; color:#003973">${name}</div>
+    names.forEach((n, i) => {
+        list.innerHTML += `<div class="card">
+            <div class="card-img"><img src="${images[i]}" alt="${n}"></div>
+            <div class="card-info">${n}</div>
         </div>`;
     });
 
-    // ID Verification Simulation
-    function verifyID() {
-        const id = document.getElementById('faydaID').value;
-        const msg = document.getElementById('v-msg');
-        if(id.length < 10) {
-            msg.style.color = "red";
-            msg.innerText = "❌ Invalid ID. Please check your Fayda card.";
-        } else {
-            msg.style.color = "#28a745";
-            msg.innerText = "✅ ID Verified! Accessing Mission Portal...";
-        }
+    function verify() {
+        const val = document.getElementById('idIn').value;
+        const msg = document.getElementById('msg');
+        if(val.length >= 10) { msg.style.color="var(--green)"; msg.innerText="✅ Verification Successful!"; }
+        else { msg.style.color="red"; msg.innerText="❌ Invalid ID Number"; }
     }
 
-    // FAQ Toggle Logic
-    function toggleFAQ(index) {
-        const ans = document.getElementById('faq' + index);
-        ans.style.maxHeight = ans.style.maxHeight === "100px" ? "0px" : "100px";
+    function toggleF(i) {
+        const a = document.getElementById('f' + i);
+        a.style.maxHeight = a.style.maxHeight === "100px" ? "0px" : "100px";
     }
+
+    function openCert() { document.getElementById('modal').style.display='flex'; }
+    function closeCert() { document.getElementById('modal').style.display='none'; }
+
+    let c = 482102;
+    setInterval(() => { c += Math.floor(Math.random()*3); document.getElementById('count').innerText = c.toLocaleString(); }, 3000);
 </script>
-
 </body>
 </html>
